discussion/kv_engine/175752/175752_rev8_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-52158: Check for privilege in RangeScan continue/cancel

In this patch Privilege::Read is checked, but will change to
Privilege::RangeScan once available.

A range-scan requires that the user has the RangeScan privilege
somewhere in the "path" to the collection. For RangeScan create
this is checked by mcbp_privileges as the incoming command states
which collection the scan is against.

For continue/cancel the engine must do the checks as it needs to
locate the scan and then the scan's collection.

A "bonus" of this is that the collection is also existence checked
during the checkPrivilege method, allowing continue to 'force'
cancel the scan if the collection rather than waiting for the scan
to move forward (load a key) and fail in range_scan_callbacks.cc

Change-Id: I3e1b6ad043e9d377aa897b8a2a64a637f36ac7a9

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-08-15 20:02:28.000000000
Message: 
Uploaded patch set 8.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-08-15 20:14:32.000000000
Message: 
Patch Set 8: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19471/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1439:1: error: version control conflict marker in file [clang-diagnostic-error]
<<<<<<< HEAD
^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19471/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1439:1:
error: version control conflict marker in file [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19471/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48367/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\range_scan_test.cc(1439): error C2059: syntax error: "<<" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48367/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9161/ : FAILURE

Compile error at [2022-08-15T20:06:26.760Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1439:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9161/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22482/ : FAILURE

Compile error at [2022-08-15T20:05:00.423Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1439:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22482/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21408/ : FAILURE

Compile error at [2022-08-15T20:06:09.013Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1439:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21408/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20663/ : FAILURE

Compile error at [2022-08-15T20:14:10.821Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1439:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20663/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21760/ : FAILURE

Compile error at [2022-08-15T20:05:29.021Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1439:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21760/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29786/ : FAILURE

Compile error at [2022-08-15T20:06:55.803Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1439:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29786/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9258/ : FAILURE

Compile error at [2022-08-15T20:10:49.434Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1439:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9258/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/18683/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40636/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
